--- a/README.org
+++ b/README.org
@@ -8,7 +8,7 @@ suggestions for improvement.
 
 If you really want, you can install with [[http://www.xach.com/lisp/buildapp/][buildapp]]:
 #+begin_src sh
-buildapp --load /path/to/git-status.lisp --entry main --output /path/to/git_super_status
+buildapp --load /path/to/Git-status-zsh.lisp --entry main --output /path/to/git_super_status
 #+end_src
 
 In theory, you should be able to download the prebuilt from this gist, though I
