--- a/README.org
+++ b/README.org
@@ -1,4 +1,4 @@
-* git-status.lisp
+* zsh-git-prompt-lisp
 A common-lisp implementation of [[https://github.com/olivierverdier/zsh-git-prompt][zsh-git-prompt]].
 
 This isn't faster, or better by pretty much any metric than the original. (It
@@ -10,7 +10,7 @@ any suggestions for improvement.
 If you really want, you can install with [[http://www.xach.com/lisp/buildapp/][buildapp]]:
 
 #+begin_src sh
-buildapp --load /path/to/Git-status-zsh.lisp --entry main --output /path/to/git_super_status
+buildapp --load /path/to/git-status-zsh.lisp --entry main --output /path/to/git_super_status
 #+end_src
 
 In theory, you should be able to download the prebuilt executable from the
