--- a/README.org
+++ b/README.org
@@ -7,6 +7,10 @@ for fun and practice, and to see if I could. I had a bit of experience with
 emacs lisp and a couple days with Common Lisp when writing this, so I welcome
 any suggestions for improvement.
 
+*Note:* I tried to use no external packages in this implementation. You can take
+a look at the ~cl-ppcre~ branch for an implementation with regular expressions
+that is /much/ nicer in my opinion, if a bit slower.
+
 If you really want, you can install with [[http://www.xach.com/lisp/buildapp/][buildapp]]:
 
 #+begin_src sh
